--- a/css/main.css
+++ b/css/main.css
@@ -156,7 +156,7 @@ ul li, ol li {
 }
 
 .btn-common {
-  background-color: #E91E63;
+  background-color: #808080;
   position: relative;
   z-index: 1;
   border-radius: 4px;
